--- a/example.html
+++ b/example.html
@@ -38,56 +38,277 @@
   </div>
 </header>
 
-<section class="hero" id="hero">
-  <div class="container-fluid">
-    <div class="hero-inner">
-      <h1>Large hero message</h1>
-      <p>Additional hero details dolor sit amet, consectetuer adipiscing elit.</p>
-      <a href="#" class="cta">Link somewhere <i class="fa fa-chevron-right"></i></a>
-      <a href="#" class="cta-inverse">Link elsewhere <i class="fa fa-chevron-right"></i></a>
-    </div>
-  </div>
-</section>
-
-<section class="full-width fw-primary text-center">
-  <div class="container-fluid">
-    <div class="wrap-inner">
-      <h2>Important marketing message.</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
-        auctor quis, purus.</p>
-      <a href="#" class="cta">Some CTA <i class="fa fa-caret-right"></i></a>
-    </div>
-  </div>
-</section>
-
-<section class="full-width fw-alt text-center">
-  <div class="container-fluid">
-    <div class="wrap-inner">
-      <h2>Important marketing message.</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
-        auctor quis, purus.</p>
-      <a href="#" class="cta alt">Some CTA <i class="fa fa-caret-right"></i></a>
-    </div>
-  </div>
-</section>
-
-<section class="full-width fw-highlight text-center">
-  <div class="container-fluid">
-    <div class="wrap-inner">
-      <h2>Important marketing message.</h2>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
-        auctor quis, purus.</p>
-      <a href="#" class="cta-inverse">Some CTA <i class="fa fa-chevron-right"></i></a>
-    </div>
-  </div>
-</section>
-
 <section class="container-fluid" id="content">
   <div class="row">
     <main class="col-sm-9" id="main" role="main">
+      <h1>Heading 1</h1>
+      <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget,
+        tristique nec, auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada
+        libero. Fusce ac quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam,
+        tellus dui fringilla quam, in condimentum augue lorem non tellus. </p>
+
+      <h2>Heading 2</h2>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
+        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
+        quam, in condimentum augue lorem non tellus. </p>
+
+      <h3>Heading 3</h3>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
+        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
+        quam, in condimentum augue lorem non tellus. </p>
+
+      <h4>Heading 4</h4>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+        auctor quis, purus. Vivamus ut sem. Fusce aliquam nunc vitae purus. Aenean viverra malesuada libero. Fusce ac
+        quam. Donec neque. Nunc venenatis enim nec quam. Cras faucibus, justo vel accumsan aliquam, tellus dui fringilla
+        quam, in condimentum augue lorem non tellus. </p>
+
+      <h5>Heading 5</h5>
+      <h6>Heading 6</h6>
+
+      <h2>Lists</h2>
+      <h3>Unordered list</h3>
+      <ul>
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item
+          <ul>
+            <li>list item</li>
+            <li>list item</li>
+            <li>list item</li>
+          </ul>
+        </li>
+        <li>list item</li>
+        <li>list item</li>
+      </ul>
+
+      <h4>Unstyled list</h4>
+      <ul class="list-unstyled">
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item</li>
+      </ul>
+
+      <h4>Inline list</h4>
+      <ul class="list-inline">
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item</li>
+      </ul>
+
+      <h3>Ordered list</h3>
+      <ol>
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item</li>
+        <li>list item</li>
+      </ol>
+
+      <h3>Description list</h3>
+      <dl>
+        <dt>Term</dt>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
+        <dt>Term</dt>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
+        <dt>Term</dt>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
+      </dl>
+
+      <h4>Inline description</h4>
+      <dl class="dl-horizontal">
+        <dt>Term</dt>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
+        <dt>Term</dt>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
+        <dt>Term</dt>
+        <dd>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique nec,
+          auctor quis, purus. Vivamus ut sem.
+        </dd>
+      </dl>
+
+      <h2>Basic text formatting</h2>
+
+      <h3>Emphasis</h3>
+      <strong>strong</strong> <b>bold</b> <em>emphasis</em> <i>italic</i>
+
+      <h3>Address</h3>
+      <address>
+        <strong>Your Name</strong><br>
+        123 Main Street<br>
+        Anytown, XY 12345
+      </address>
+
+      <h3>Blockquote</h3>
+      <blockquote>
+        <p>&ldquo;Lorem ipsum dolor sit amet consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique
+          nec.&rdquo;</p>
+        <small>John Smith</small>
+      </blockquote>
+      <blockquote class="pull-right">
+        <p>&ldquo;Lorem ipsum dolor sit amet consectetuer adipiscing elit. Duis ligula lorem, consequat eget, tristique
+          nec.&rdquo;</p>
+        <small>John Smith</small>
+      </blockquote>
+
+      <h3>Abbreviations</h3>
+      <p><abbr class="initialism" title="PHP: Hypertext Preprocessor">PHP</abbr></p>
+
+      <h3>Small text</h3>
+      <p>
+        <small>Tiny text</small>
+      </p>
+
+      <h3>Alignment</h3>
+      <p class="text-left">left</p>
+      <p class="text-center">center</p>
+      <p class="text-right">right</p>
+
+      <h3>Special characters</h3>
+      <p>Left &amp; right double quotes: &ldquo; <!--&#8220;--> &rdquo; <!--&#8221;--><br>
+        Left &amp; right single quotes: &lsquo; &rsquo;<br>
+        Ampersand: &amp;<br>
+        Em dash: &mdash; <!--&#8212;--><br>
+        En dash: &ndash; <!--&#8211;--></p>
+
+      <h2>Basic table</h2>
+
+      <table class="table table-striped">
+        <caption>
+          Caption
+        </caption>
+        <thead>
+        <tr>
+          <th scope="col">header</th>
+          <th scope="col">header</th>
+          <th scope="col">header</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>cell</td>
+          <td>cell</td>
+          <td>cell</td>
+        </tr>
+        <tr>
+          <td>cell</td>
+          <td>cell</td>
+          <td>cell</td>
+        </tr>
+        <tr>
+          <td>cell</td>
+          <td>cell</td>
+          <td>cell</td>
+        </tr>
+        <tr>
+          <td>cell</td>
+          <td>cell</td>
+          <td>cell</td>
+        </tr>
+        <tr>
+          <td>cell</td>
+          <td>cell</td>
+          <td>cell</td>
+        </tr>
+        </tbody>
+      </table>
+
+      <h2>Basic form</h2>
+      <form method="post" action="#">
+        <fieldset>
+          <legend>Contact Us</legend>
+
+          <div class="form-group">
+            <label for="full_name">Your Name</label>
+            <input type="text" name="full_name" id="full_name" placeholder="name" class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label for="email">Your Email</label>
+            <input type="text" name="email" id="email" placeholder="email" class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label for="routing">Concerning</label>
+            <select name="routing" id="routing" class="form-control">
+              <option value="" selected>select an option</option>
+              <option value="Lizards">Lizards</option>
+              <option value="Monkeys">Monkeys</option>
+              <option value="Cats">Cats</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="message">Your Message</label>
+            <textarea name="message" id="message" cols="5" rows="8" class="form-control">enter a message</textarea>
+          </div>
+
+          <p><b>Receive our newsletter?</b></p>
+          <div class="radio">
+            <label>
+              <input type="radio" name="newsletter" value="yes" id="yes">
+              Sign me up!
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="newsletter" value="no" id="no">
+              No thanks
+            </label>
+          </div>
+
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" name="terms" id="terms" value="agree">
+              I agree to the <a href="#">terms and conditions</a>
+            </label>
+          </div>
+
+        </fieldset>
+        <button type="submit" name="send" id="send" class="btn btn-default">Send</button>
+      </form>
+
+      <h2>Responsive image</h2>
+      <p>
+        <img src="http://placehold.it/800x400" class="img-responsive" alt="some image">
+      </p>
+
+      <h2>Buttons</h2>
+      <p>Using class <code>.cta</code> (<em>call to action</em>) to avoid styling conflicts with Bootstrap
+        <code>.btn</code> class.</p>
+      <a href="#" class="cta">Some CTA <i class="fa fa-caret-right"></i></a>
+      <a href="#" class="cta-inverse">Inverse CTA <i class="fa fa-caret-right"></i></a>
+      <a href="#" class="cta alt">Alt CTA <i class="fa fa-caret-right"></i></a>
+      <a href="#" class="cta wide">Wide CTA <i class="fa fa-caret-right"></i></a>
+      <br><br>
+
     </main>
+
     <aside class="col-sm-3" role="complementary">
+      <h4>Examples</h4>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="example.html">Basic markup</a></li>
+          <li><a href="bootstrap-header.html">Bootstrap header markup</a></li>
+          <li><a href="http://getbootstrap.com/">Bootstrap documentation</a></li>
+        </ul>
+      </nav>
     </aside>
+
   </div>
 </section>
 
