--- a/bootstrap-navbar.html
+++ b/bootstrap-navbar.html
@@ -7,7 +7,7 @@
   <title>Boilerplate</title>
   <meta name="description" content="">
   <meta name="author" content="Douglas Green">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link href="css/main.css" rel="stylesheet">
   <script src="js/modernizr.custom.07230.js"></script>
@@ -15,25 +15,27 @@
   <!-- analytics -->
 </head>
 <body class="home">
-<div class="sr-only"><a href="#content">skip to page content</a></div>
+<a class="sr-only sr-only-focusable" href="#content">skip to page content</a>
 
 <header class="site-header" id="top" role="banner">
-  <nav class="navbar navbar-inverse" role="navigation">
+  <nav class="navbar navbar-expand-md navbar-light bg-light" role="navigation">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">Bootstrap Starter Template</a>
-      </div>
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">Nav Link</a></li>
-          <li><a href="index.html">Nav Link</a></li>
-          <li><a href="index.html">Nav Link</a></li>
+      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="index.html">Bootstrap Starter Template</a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a href="index.html" class="nav-link dropdown-toggle" id="navbarDropdownLink" data-toggle="dropdown" aria-haspopup="true"
+               aria-expanded="false">Examples</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownLink">
+              <li class="dropdown-item"><a href="examples/blog.html">Blog index page</a></li>
+              <li class="dropdown-item"><a href="examples/post.html">Blog post page</a></li>
+              <li class="dropdown-item"><a href="examples/portfolio.html">Portfolio thumbnail page</a></li>
+              <li class="dropdown-item"><a href="examples/detail.html">Portfolio detail page</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
@@ -42,13 +44,13 @@
 
 <section class="container-fluid" id="content">
   <div class="row">
-    <main class="col-sm-9" id="main" role="main">
+    <main class="col-md-9" id="main" role="main">
       <h1>Bootstrap navbar</h1>
       <p>You would need to modify a few header and page styles to use the Bootstrap navbar component.
         The styles are currently configured for a custom navbar component.</p>
     </main>
 
-    <aside class="col-sm-3" role="complementary">
+    <aside class="col-md-3" role="complementary">
       <h4>Examples</h4>
       <nav>
         <ul>
@@ -63,8 +65,9 @@
   </div>
 </section>
 
-<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
